--- a/skin/PM3.HD/media/Makefile
+++ b/skin/PM3.HD/media/Makefile
@@ -168,6 +168,7 @@ IMAGES= \
 	home-playmedia.png \
 	home-power-focus.gif \
 	home-power.png \
+	icon_addons.png \
 	icon_appearence.png \
 	icon_music.png \
 	icon_network.png \
