--- a/lib/libXBMC_pvr/Makefile.in
+++ b/lib/libXBMC_pvr/Makefile.in
@@ -1,15 +1,13 @@
 ARCH=@ARCH@
-LIBDIR=@libdir@
-INCLUDES=-I. -I../../include -I../../xbmc/addons
+INCLUDES=-I. -I../../xbmc/addons/include -I../../xbmc
 DEFINES+=
 CXXFLAGS=-fPIC
 LIBNAME=libXBMC_pvr
 OBJS=$(LIBNAME).o
 
-LIB_SHARED=$(LIBNAME).so.0.0.1
-LIB_STATIC=$(LIBNAME).a
+LIB_SHARED=../../addons/libraries/addon/libXBMC_pvr/$(LIBNAME)-$(ARCH).so
 
-all: $(LIB_SHARED) $(LIB_STATIC)
+all: $(LIB_SHARED)
 
 $(LIB_SHARED): $(OBJS)
 ifeq ($(findstring osx,$(ARCH)), osx)
@@ -17,19 +15,11 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 	$(CXX) -bundle -shared -flat_namespace -undefined suppress -o $(LIB_SHARED) $(OBJS)
 	../../tools/Mach5/wrapper.rb $@;mv output.so $@
 else
-	$(CXX) $(CFLAGS) -shared -Wl,-soname,$(LIBNAME).so.0 -g -o $(LIB_SHARED) $(OBJS)
+	$(CXX) $(CFLAGS) -shared -g -o $(LIB_SHARED) $(OBJS)
 endif
-	@ln -sf $(LIB_SHARED) $(LIBNAME).so.0
-	@ln -sf $(LIB_SHARED) $(LIBNAME).so
-
-$(LIB_STATIC): $(OBJS)
-	$(AR) cq $@ $(OBJS)
 
 CLEAN_FILES = \
-	$(LIBNAME).so.0.0.1 \
-	$(LIBNAME).so.0 \
-	$(LIBNAME).so \
-	$(LIBNAME).a \
+	$(LIB_SHARED) \
 
 DISTCLEAN_FILES= \
 	Makefile \
