--- a/xbmc/visualizations/DirectXSpectrum/directx_spectrum.vcproj
+++ b/xbmc/visualizations/DirectXSpectrum/directx_spectrum.vcproj
@@ -22,7 +22,6 @@
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			UseOfMFC="0"
 			CharacterSet="2"
 			>
 			<Tool
@@ -43,15 +42,14 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;DIRECTX_SPEKTRUM_EXPORTS;_WIN32PC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -64,12 +62,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\..\..\include\libXBMC_addonD.lib d3dx9.lib"
-				OutputFile="..\..\..\addons\visualizations\DirectXSpectrum\Spectrum_win32dx.vis"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories=""
-				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames=""
+				AdditionalDependencies="d3dx9.lib"
+				OutputFile="../../../addons/visualizations/DXSpectrum/Spectrum_win32dx.vis"
+				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/Spectrum_win32dx.pdb"
 				SubSystem="2"
@@ -126,7 +121,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
-				AdditionalIncludeDirectories="..\..\..\include"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;DIRECTX_SPEKTRUM_EXPORTS;_WIN32PC"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -145,11 +140,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="winmm.lib ws2_32.lib d3dx9.lib ..\..\..\include\libXBMC_addon.lib"
-				OutputFile="..\..\..\addons\visualizations\DirectXSpectrum\Spectrum_win32dx.vis"
+				AdditionalDependencies="winmm.lib ws2_32.lib d3dx9.lib"
+				OutputFile="../../../addons/visualizations/DXSpectrum/Spectrum_win32dx.vis"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
+				ProgramDatabaseFile="$(OutDir)/Spectrum_win32dx.pdb"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -193,18 +188,6 @@
 				RelativePath=".\directx_spectrum.cpp"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFC}"
-			>
-		</Filter>
-		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD02}"
-			>
 		</Filter>
 	</Files>
 	<Globals>
