--- a/lib/libXBMC_pvr/Makefile.in
+++ b/lib/libXBMC_pvr/Makefile.in
@@ -5,7 +5,7 @@ CXXFLAGS=-fPIC
 LIBNAME=libXBMC_pvr
 OBJS=$(LIBNAME).o
 
-LIB_SHARED=../../addons/libraries/addon/libXBMC_pvr/$(LIBNAME)-$(ARCH).so
+LIB_SHARED=../../addons/org.xbmc.pvr.library/$(LIBNAME)-$(ARCH).so
 
 all: $(LIB_SHARED)
 
