--- a/xbmc/Makefile.in
+++ b/xbmc/Makefile.in
@@ -214,6 +214,7 @@ SRCS=Application.cpp \
      WinEventsSDL.cpp \
      AdvancedSettings.cpp \
      Bookmark.cpp \
+     TextureCache.cpp \
 
 LIB=xbmc.a
 
