--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -5454,6 +5454,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\xbmc\addons\AddonStatusHandler.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\xbmc\addons\AddonStatusHandler.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\xbmc\addons\DllAddon.h"
 					>
 				</File>
@@ -6153,11 +6161,11 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\xbmc\lib\libPython\xbmcmodule\controlslider.cpp"
+						RelativePath="..\..\xbmc\lib\libPython\xbmcmodule\controlradiobutton.cpp"
 						>
 					</File>
 					<File
-						RelativePath="..\..\xbmc\lib\libPython\xbmcmodule\controlradiobutton.cpp"
+						RelativePath="..\..\xbmc\lib\libPython\xbmcmodule\controlslider.cpp"
 						>
 					</File>
 					<File
