--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2374,6 +2374,14 @@
 					Name="Helpers"
 					>
 					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\DSGeometry.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\DSGeometry.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\RegKey.cpp"
 						>
 					</File>
@@ -2578,7 +2586,11 @@
 					Name="DShowUtil"
 					>
 					<File
-						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\DSGeometry.h"
+						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\BaseDsRenderer.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\BaseDsRenderer.h"
 						>
 					</File>
 					<File
@@ -2623,6 +2635,50 @@
 					</File>
 					<File
 						RelativePath="..\..\xbmc\cores\DSPlayer\DShowUtil\MediaTypes.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Subtitles"
+					>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DX9SubPic.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DX9SubPic.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\ISubPic.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\ISubPic.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\NullRenderers.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\NullRenderers.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\SubtitleInputPin.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\SubtitleInputPin.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\TextPassThruFilter.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\TextPassThruFilter.h"
 						>
 					</File>
 				</Filter>
