--- a/configure.in
+++ b/configure.in
@@ -1070,6 +1070,8 @@ fi
 AC_CONFIG_FILES([.dummy])
 
 AC_CONFIG_FILES([${OUTPUT_FILES}])
+OUTPUT_FILES+=" \
+             .dummy"
 AC_SUBST(CFLAGS)
 AC_SUBST(CXXFLAGS)
 AC_SUBST(INCLUDES)
